--- a/package.json
+++ b/package.json
@@ -5,10 +5,12 @@
   },
   "dependencies": {
     "axios": "^0.17.1",
+    "babel-plugin-styled-components": "^1.4.0",
     "express": "^4.16.2",
     "next": "^4.2.1",
     "next-routes": "^1.2.0",
     "react": "^16.2.0",
-    "react-dom": "^16.2.0"
+    "react-dom": "^16.2.0",
+    "styled-components": "^2.4.0"
   }
 }
