--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     "build": "next build ./app",
     "start": "NODE_ENV=production node app/server.js",
     "lint": "eslint .",
-    "lint:fix": "eslint . --fix"
+    "lint:fix": "eslint . --fix",
+    "lint:css": "stylelint ."
   },
   "dependencies": {
     "axios": "^0.17.1",
@@ -14,11 +15,16 @@
     "next-routes": "^1.4.2",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
-    "styled-components": "^2.4.0"
+    "styled-components": "^2.4.0"    
   },
   "license": "UNLICENSED",
   "devDependencies": {
     "@ueno/eslint-config": "^1.2.8",
-    "eslint": "4.9.0"
+    "eslint": "4.9.0",
+    "stylelint": "^9.4.0",
+    "stylelint-config-recommended": "^2.1.0",
+    "stylelint-config-styled-components": "^0.1.1",
+    "stylelint-processor-styled-components": "^1.3.2"
+    
   }
 }
