--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "start": "NODE_ENV=production node app/server.js",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
-    "lint:css": "stylelint ."
+    "lint:css": "stylelint .",
+    "export": "yarn build ./app && next export ./app"
   },
   "dependencies": {
     "axios": "^0.17.1",
@@ -15,7 +16,7 @@
     "next-routes": "^1.4.2",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
-    "styled-components": "^2.4.0"    
+    "styled-components": "^2.4.0"
   },
   "license": "UNLICENSED",
   "devDependencies": {
@@ -25,6 +26,5 @@
     "stylelint-config-recommended": "^2.1.0",
     "stylelint-config-styled-components": "^0.1.1",
     "stylelint-processor-styled-components": "^1.3.2"
-    
   }
 }
