--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
     "build": "next build ./app",
     "start": "NODE_ENV=production node app/server.js",
     "lint": "eslint .",
-    "lint:fix": "eslint . --fix"
+    "lint:fix": "eslint . --fix",
+    "lint:css": "stylelint .",
+    "export": "yarn build ./app && next export ./app"
   },
   "dependencies": {
     "axios": "^0.17.1",
@@ -19,6 +21,10 @@
   "license": "UNLICENSED",
   "devDependencies": {
     "@ueno/eslint-config": "^1.2.8",
-    "eslint": "4.9.0"
+    "eslint": "4.9.0",
+    "stylelint": "^9.4.0",
+    "stylelint-config-recommended": "^2.1.0",
+    "stylelint-config-styled-components": "^0.1.1",
+    "stylelint-processor-styled-components": "^1.3.2"
   }
 }
